--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ script:
 
 stages:
   - test
-  # Only execute deployment stage on master branch, tagged commits,
+  # Only execute deployment stage on tagged release commits in the form of "v1.2.3"
   # and from your repository (e.g. not PRs).
   - name: deploy
-    if: branch = master AND tag IS PRESENT AND repo = amykyta3/speedy-antlr-example
+    if: repo = amykyta3/speedy-antlr-example AND tag =~ ^v\d+\.\d+\.\d+$
 
 jobs:
   include:
