--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,6 @@ python:
   - 3.7
   - 3.8
 
-before_install:
-  - |
-    if [[ "$TRAVIS_OS_NAME" = windows ]]; then
-        choco install python --version 3.8.0
-        export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
-    fi
-
 install:
   - python -m pip install pytest speedy-antlr-tool
 
@@ -59,6 +52,9 @@ jobs:
       name: Build and deploy Windows wheels
       os: windows
       language: shell
+      before_install:
+        - choco install python --version 3.8.1
+        - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
       install: python -m pip install twine cibuildwheel==1.1.0
       script: python -m cibuildwheel --output-dir wheelhouse
       after_success: python -m twine upload --skip-existing wheelhouse/*.whl
@@ -72,4 +68,4 @@ env:
       # Note: TWINE_PASSWORD is set in Travis settings
     
     # Signal setup.py to fail if binary build fails
-    - REQUIRE_CI_BINARY_BUILD
+    - SPAM_EXAMPLE_REQUIRE_CI_BINARY_BUILD
