--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+name: build
+
 on:
   push:
     branches:
@@ -15,11 +17,11 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - 3.6
           - 3.7
           - 3.8
           - 3.9
           - "3.10"
+          - "3.11"
 
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +37,7 @@ jobs:
 
       - name: Install
         run: |
-          python setup.py install
+          python -m pip install .
 
       - name: Test
         run: |
@@ -59,7 +61,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.4.0
+        uses: pypa/cibuildwheel@v2.11.2
         env:
           # Only build CPython 3.x targets
           CIBW_BUILD: "cp3*"
@@ -102,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Only publish when a GitHub Release is created.
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release'
     steps:
       - uses: actions/download-artifact@v3
         with:
